Bug 137838 - Hyperlink to shape apparently not working
Summary: Hyperlink to shape apparently not working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-28 19:09 UTC by Telesto
Modified: 2022-01-28 13:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.07 KB, application/vnd.oasis.opendocument.text)
2020-10-28 19:10 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-10-28 19:09:53 UTC
Description:
Hyperlink to shape apparently not working

Steps to Reproduce:
1. Open the attached file
2. CTRL+CLICK the link on top of the page

Actual Results:
Nothing

Expected Results:
Jumping to shape I assume?


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 94e6e140491de31c0788c91af855a75a3bb12709
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-10-28 19:10:09 UTC
Created attachment 166818 [details]
Example file
Comment 2 Telesto 2020-10-28 19:16:15 UTC
@Heiko
They help doesn't exactly explain this feature.. If it's really that broken as I suspect, it could be removed IMHO. At least from they navigator as clearly nobody uses it. 

They link does work on PDF export in 4.4.7.2 except pointing to they wrong page (I inserted the link and moved the image).
PDF export with master results even in a broken link
Comment 3 Heiko Tietze 2020-10-29 10:36:44 UTC
Guess you entered some text in the target field not using the browser (button attached to the right). This dialog shows a tree with no entry, meaning #Shape wont be found like #Foo. Don't know why shapes are off the grid, renaming doesn't help. But the feature itself is okay; linking to a bookmark works like a charm. 

Adding Jim since he worked a lot on the Navigator and the tree is probably using the same code.
Comment 4 Jim Raykowski 2020-11-02 02:25:13 UTC
Included with this enhancement patch are fixes to focus lost bugs after hyperlink or Navigator content navigation from frame type content to non-frame type content.

https://gerrit.libreoffice.org/c/core/+/105164
Comment 5 Commit Notification 2020-12-03 05:24:01 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1df2581cfffc87386c6de7614793b2d664244e5a

tdf#137838 SW: Add ability to create a hyperlink to a drawing object

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.