tdf#137838 SW: Add ability to create a hyperlink to a drawing object

within a document

Change-Id: Ie51ad6a0a9da1a2478a4a4abc73ba793ea92704c