sw/source/uibase/utlui/content.cxx
@@ -4296,8 +4296,6 @@ static void lcl_AssureStdModeAtShell(SwWrtShell* pWrtShell)
 void SwContentTree::GotoContent(const SwContent* pCnt)
 {
     lcl_AssureStdModeAtShell(m_pActiveShell);
-
-    bool bSel = false;
     switch(pCnt->GetParent()->GetType())
     {
         case ContentTypeId::OUTLINE   :
@@ -4314,8 +4312,7 @@ void SwContentTree::GotoContent(const SwContent* pCnt)
         case ContentTypeId::GRAPHIC   :
         case ContentTypeId::OLE       :
         {
-            if(m_pActiveShell->GotoFly(pCnt->GetName()))
-                bSel = true;
+            m_pActiveShell->GotoFly(pCnt->GetName());
         }
         break;
         case ContentTypeId::BOOKMARK:
@@ -4336,7 +4333,6 @@ void SwContentTree::GotoContent(const SwContent* pCnt)
                 m_pActiveShell->Right( CRSR_SKIP_CHARS, true, 1, false);
                 m_pActiveShell->SwCursorShell::SelectTextAttr( RES_TXTATR_INETFMT, true );
             }
-
         }
         break;
         case ContentTypeId::REFERENCE:
@@ -4356,47 +4352,26 @@ void SwContentTree::GotoContent(const SwContent* pCnt)
         break;
         case ContentTypeId::DRAWOBJECT:
         {
-            SwPosition aPos = *m_pActiveShell->GetCursor()->GetPoint();
-            SdrView* pDrawView = m_pActiveShell->GetDrawView();
-            if (pDrawView)
-            {
-                pDrawView->SdrEndTextEdit();
-                pDrawView->UnmarkAll();
-                SwDrawModel* _pModel = m_pActiveShell->getIDocumentDrawModelAccess().GetDrawModel();
-                SdrPage* pPage = _pModel->GetPage(0);
-                const size_t nCount = pPage->GetObjCount();
-                for( size_t i=0; i<nCount; ++i )
-                {
-                    SdrObject* pTemp = pPage->GetObj(i);
-                    if (pTemp->GetName() == pCnt->GetName())
-                    {
-                        SdrPageView* pPV = pDrawView->GetSdrPageView();
-                        if( pPV )
-                        {
-                            pDrawView->MarkObj( pTemp, pPV );
-                        }
-                    }
-                }
-                m_pActiveShell->GetNavigationMgr().addEntry(aPos);
-                m_pActiveShell->EnterStdMode();
-                bSel = true;
-            }
+            m_pActiveShell->GotoDrawingObject(pCnt->GetName());
         }
         break;
         default: break;
     }
-    if(bSel)
+
+    if (m_pActiveShell->IsFrameSelected() || m_pActiveShell->IsObjSelected())
     {
         m_pActiveShell->HideCursor();
         m_pActiveShell->EnterSelFrameMode();
     }
+
     SwView& rView = m_pActiveShell->GetView();
     rView.StopShellTimer();
     rView.GetPostItMgr()->SetActiveSidebarWin(nullptr);
     rView.GetEditWin().GrabFocus();
 
-    // force scroll to cursor position when navigating to inactive document
-    if(!bSel)
+    // assure visible view area is at cursor position
+    if (!m_pActiveShell->IsCursorVisible() && !m_pActiveShell->IsFrameSelected() &&
+            !m_pActiveShell->IsObjSelected())
     {
         Point rPoint = m_pActiveShell->GetCursorDocPos();
         rPoint.setX(0);
